# tick-tack

./: README.md  docker-compose.yaml
.github/workflows/: docker-image.yml
BE/: Cargo.toml  dockerfile
BE/src/: main.rs  mmatch.rs
FE/: dockerfile  package-lock.json  package.json
FE/src/: App.tsx  index.css
FE/src/components/: tick-tak-grid.module.css  tick-tak-grid.tsx
FE/src/types/: tick-tack.ts
app/: package-lock.json  package.json  tailwind.config.ts
app/src/: middleware.ts
app/src/actions/: me.ts
app/src/app/: globals.css  layout.tsx
app/src/components/: app-sidebar.tsx
app/src/contexts/: me-context.tsx
frontend/: .gitignore  components.json  dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: routeTree.gen.ts
frontend/app/actions/: auth.ts  me.ts
frontend/app/components/: app-sidebar.tsx
frontend/app/contexts/: me-context.tsx
frontend/app/lib/: cookies.ts  parse-jwt.ts
frontend/app/routes/: __root.tsx  _authed.tsx
server/: .env.example  Cargo.toml  Dockerfile
server/.sqlx/: query-079e6db0711e14d988ea26852cc629a61b032081f390a24b50702c2467664dad.json  query-11e31678d460dafc5bdbc5449308602aa1d0d89b7cd7d3973b8d4e55ca43491b.json  query-17dcf1f31693ced8ebd493d3399bbf5fa346fae0800af837c259dd42def21109.json  query-43a060b85dcaba349bc3b59226ca4db068569242b332b03c90d6a55c8536e04f.json  query-6886520124c661b4e805a1fe619dfb7c9328309706db6b5f4da36deae4afc2d1.json  query-9299710292a76106c0cbcb87d8629c4558d82521cb7dc485b4ba30830d879fd7.json  query-cf1b697c6309d61a012e97e4a3e61ff113d0eca3f3eba1737d8ede29440ba60c.json  query-ecf70beab9bb96724d19fab97a20e91217dacbd1552b6519c8552ee3c4e51f04.json
server/migrations/: 20241113214427_init.sql  20241114073808_make_match_player_two_optional.sql  20241116110245_add_password_to_users.sql  20241116170417_drop_name.sql  20241116173623_make_email_unique.sql  20241117101717_refresh_token.sql  20241118210850_init.sql  20241120220959_make_org_unique.sql  20241120221149_make_org_only_once.sql
server/src/: main.rs  state.rs  users.rs
server/src/auth/: access_token.rs  authorization_middleware.rs  keys.rs  mod.rs
server/src/db/: auth.rs  mod.rs  organization.rs  user.rs
server/src/models/: user.rs
server/src/routers/: auth.rs  login.rs  matches.rs  mod.rs  organization.rs  users.rs
(+21 files in other folders)
