[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11.5"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
redis = { version = "0.27.5", features = ["tokio-comp"] }
regex = "1.11.1"
serde_json = "1.0.132"
serde = { version = "1.0", features = ["derive"] }
http = "1.1.0"
# sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls" ] }

[[bin]]
name = "websocket"
path = "./src/main.rs"