[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.41", features = ["full"] }
axum = {version = "0.7.7", features = ["tower-log", "macros"]}
fastwebsockets = { version = "0.8", features = ["upgrade", "with_axum"] }
log = "0.4"
env_logger = "0.11.5"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
redis = { version = "0.27.5", features = ["tokio-comp"] }
sqlx  = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "uuid" ] }
serde_json = "1.0.132"
serde = { version = "1.0.215", features = ["derive"] }
dotenv = "0.15"
dotenv_codegen = "0.15"


[[bin]]
name = "server"
path = "./src/main.rs"