[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.41", features = ["full"] }
axum = {version = "0.7.9", features = ["tower-log", "macros"]}
fastwebsockets = { version = "0.8", features = ["upgrade", "with_axum"] }
log = "0.4"
env_logger = "0.11.5"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
redis = { version = "0.27.5", features = ["tokio-comp"] }
sqlx  = { version = "0.8.2", features = [ "runtime-tokio-rustls", "postgres", "uuid",  "chrono" ] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
dotenv = "0.15"
dotenv_codegen = "0.15"
pwhash = "1"
jsonwebtoken = "9.2.0"
chrono = { version = "0.4.34", features = ["serde", "clock"] }
once_cell = "1.19.0"
http = "1.1.0"
tower = { version = "0.5.1"}
futures-util = "0.3"
rand = "0.8"
tower-http = {version = "0.6.0", features = ["cors"]}

[[bin]]
name = "server"
path = "./src/main.rs"
